--- a/resume.html
+++ b/resume.html
@@ -44,11 +44,12 @@
 
       <!--Languages column-->
       <div class="resume-column">
-        <h2>Languages</h2>
+        <h2>Technologies</h2>
         <ul>
           <li>HTML5</li>
           <li>CSS3</li>
           <li>Javascript</li>
+          <li>Git</li>
         </ul>
       </div>
 
